--- a/src/pages/home/style.less
+++ b/src/pages/home/style.less
@@ -1,3 +1,119 @@
-.title {
-    background: rgb(121, 242, 157);
+.rootContainer {
+    width: 100vw;
+    min-height: 100vh;
+    background-color: #ffffff;
+
+    .header {
+        width: 100%;
+        height: 4.8rem;
+        z-index: 500;
+        position: relative;
+        top: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #ffffff;
+
+        .userPic {
+            width: 4.8rem;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .imgWrapper {
+                width: 3.2rem;
+                height: 3.2rem;
+                border-radius: 50%;
+                overflow: hidden;
+                border: 1px #eee solid;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+
+        .name {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+                width: 80%;
+                height: 90%;
+            }
+        }
+
+        .search {
+            width: 4.8rem;
+            height: 100%;
+            position: absolute;
+            right: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            i {
+                font-size: 2.1rem;
+            }
+        }
+    }
+
+    .container {
+        width: 100%;
+        height: 100%;
+        background: #ffffff;
+        // height: 82vh;
+
+        .mainWrapper {
+            .bannerWrapper {
+                width: 100%;
+
+                a {
+                    display: inline-block;
+                    width: 100%;
+                    height: 18rem;
+                }
+
+                img {
+                    height: 18rem;
+                    width: 100%;
+                    vertical-align: top;
+                }
+            }
+
+            .songListWrapper {
+                min-height: calc(100vh - 18rem - 4.8rem - 5rem);
+
+                .header {
+                    width: 100%;
+                    height: 4rem;
+                    position: relative;
+                    display: flex;
+                    align-items: center;
+
+                    .text {
+                        position: absolute;
+                        left: 2rem;
+                        font-size: 1.5rem;
+                        font-weight: bold;
+                    }
+
+                    .more {
+                        position: absolute;
+                        right: 1.8rem;
+                        font-size: 1.3rem;
+                    }
+                }
+            }
+        }
+
+        .myMusic {
+            margin-bottom: 5.5rem;
+        }
+    }
 }
