--- a/src/layouts/style.less
+++ b/src/layouts/style.less
@@ -1,6 +1,8 @@
 .player {
     width: 100vw;
     height: 100vh;
+    top: 0;
+    left: 0;
     overflow: hidden;
     position: fixed;
     z-index: 500;
